app/manifests.4/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: main
          image: localhost:5000/app:latest

          volumeMounts:
            - mountPath: "/config"
              name: config
      volumes:
        - name: config
          configMap:
            name: app-config
